--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=7900
 post_url=http://localhost:8000
 actions = PURCHASE,SUBSCRIPTION
+
+logging.level.com.nibuton = DEBUG
+logging.level.org.springframework = INFO
+logging.file.name = publisher.log
